--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header">
 
 	<div id="avatar">
-	<img class="avater" src="assets/css/socialicious/svg/C4F0D6EDA8123B1.pNg">
+	<img class="avater" src="assets/css/socialicious/svg/C4F0D6EDA8123B1.jpg">
 	</div>
 
 	<h1><span>Gabe Deko</span></h1>
