--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -17,7 +17,7 @@
 		<div class="title" id="project_title"><h2>Projects</h2></div>
 		<div class="col-md-4 col-md-offset-4">
 		<h3><a href="http://verysmartdesign.com/showcaseoe/">OnlyEcho</a></h3>
-		<p class="green-text">Blog from 2011 where me and couple of friends talked about random things tht caught our interests. It lasted for about a summer.</p>
+		<p class="green-text">Blog from 2011 where a couple of friends and I wrote about random things that caught our interests. It lasted for about a summer.</p>
 		</div>
 		<div class="clearfix"></div>
 	<div class="Art">
