--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -18,7 +18,7 @@
   <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css" />
-    
+     
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -35,7 +35,7 @@
   <body>
     <nav class="navbar navbar-inverse">
   	<div class="navbar-header">
-      <a href="www.gabedeko.com" class="navbar-brand" >Gabe Deko</a>
+      <a href="/" class="navbar-brand" >Gabe Deko</a>
     </div>
 	</nav>
 
