--- a/_includes/themes/twitter/archive.html
+++ b/_includes/themes/twitter/archive.html
@@ -1,23 +1,10 @@
-
-
-
 <!DOCTYPE html>
-<html>
-
-
-  <body>
-
-  
-
-    <div class="page-content">
-      <div class="wrapper">
-        <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Wattba</title>
-    
-    <meta name="author" content="Gabe Deko">
+    <title>{{ page.title }}</title>
+    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+    <meta name="author" content="{{ site.author.name }}">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,8 +28,8 @@
   -->
 
     <!-- atom & rss feed -->
-    <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
-    <link href="/rss.xml" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+    <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
   </head>
 
   <body>
@@ -53,59 +40,50 @@
 	</nav>
 
 	<div class="post">
-    <p class="post-meta col"><h1 class="col-md-offset-2" id="post_page_title">Wattba</h1></p>
+    <p class="post-meta col"><h1 class="col-md-offset-2" id="post_page_title">{{ page.title }}</h1></p>
 	</div>
 
-    <div class="container-narrow">
+    <!-- <div class="container-narrow">
 
       <div class="content row">
-        <div class="col-md-6 col-md-offset-2"><p>It’s the end of summer. I’m going to miss the heat but I’m looking forward to all of the films coming out later this year and wearing sweaters again.</p>
-</div>
+        <div class="col-md-6 col-md-offset-2">{{ content }}</div>
         <div class="col-md-4">
         <h4>Date</h4>
-        Sep 20, 2015
+        {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
         <h4>Tags</h4>
         <ul class="tag_box">
-	      
-	      
-
-
-  
-     
-    	<li><a href="/tags.html#thoughts-ref">thoughts <span>1</span></a></li>
-     
-    	<li><a href="/tags.html#journal-ref">journal <span>1</span></a></li>
-    
-  
-
-
-
+	      {% assign tags_list = page.tags %}
+	      {% include JB/tags_list %}
 	    </ul>
         </div>
       </div>
      
      <div class="col-md-offset-2">
 	     <div class="pagination">
-	        
+	        {% if page.previous %}
+	          <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+	        {% else %}
 	          <li class="prev disabled"><a>&larr; Previous</a></li>
-	        
-	          <li><a href="/archive.html">Archive</a></li>
-	        
+	        {% endif %}
+	          <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
+	        {% if page.next %}
+	          <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+	        {% else %}
 	          <li class="next disabled"><a>Next &rarr;</a>
-	        
+	        {% endif %}
 	      </div>
-      </div>
+      </div> -->
       
     </div>
 
 	<div class="col-md-offset-2 col-md-8">
-		
+		{% if page.comments %}
 		<div id="disqus_thread"></div>
 		    <script type="text/javascript">
 		        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 		        var disqus_shortname = 'perfectlyrandom'; // required: replace example with your forum shortname
 		        // var disqus_developer = 1; // Comment out when the site is live
-		        var disqus_identifier = "/thoughts/2015/09/20/WATTBA";
+		        var disqus_identifier = "{{ page.url }}";
 		
 		        /* * * DON'T EDIT BELOW THIS LINE * * */
 		        (function() {
@@ -116,7 +94,7 @@
 		    </script>
 		    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-		
+		{% endif %}
 	</div>
 	<div class="clearfix"></div>
 	<!-- le Javascript -->
@@ -124,30 +102,6 @@
 	<script src="assets/js/jquery-2.1.4.min.js"></script>
 	<script src="assets/js/functions.js" type="text/javascript"></script>
 
-    
-
-
-
+    {% include JB/analytics %}
   </body>
-</html>
-
-
-
-
-      </div>
-    </div>
-
-    <footer>
-	<div class="foot">
-		<p class="contact">Send me a letter: <a href="">gabe.deko@gmail.com</a></p>
-		<p class="source">Gabriel Dekoladenu &copy; 2015. <a href="https://github.com/gabedeko/gabedeko.github.com">Source</a>.</p>
-	</div>
-	
-	
-</footer>
-
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
-  </body>
-
 </html>
